<resources>
    <string name="app_name">Gourmet Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gourmet Hub</string>
    <string name="nav_header_subtitle">andres.cortez@gourmethub.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="recipe_image">Imagen de la receta</string>
    <string name="remove_favorite">Eliminar de favoritos</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_shopping">Shopping</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="notifications_title">Notifications</string>

</resources>
